# fastbot

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
clients/embeddings/: transformer_client.py
clients/llm/: gemini_client.py
config/: prompts.yml
controllers/: chat.py
models/: message.py  state.py
services/: agent.py  memory.py  retriever.py
