[project]
name = "fastbot"
version = "0.1.0"
description = "A powerful AI chatbot built with FastAPI and Google's Gemini model"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic-settings>=2.1.0",
    "langchain-google-genai>=0.0.5",
    "google-generativeai>=0.3.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "langchain-community>=0.0.13",
    "langchain-chroma>=0.0.4",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.22",
    "pypdf>=4.0.1",
    "requests>=2.31.0",
    "langchain-huggingface>=0.0.5"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "ruff>=0.2.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.isort]
known-first-party = ["fastbot"]
